Modernize plugin reflection calls